# DigiPen_CS230_Engine

./: .gitignore  CMakeLists.txt  Project3.sln  Project3.vcxproj  Project4-Spaceship.docx  Project4.sln  Project4.vcxproj  Project4.vcxproj.filters  Project5-Asteroids.docx  Project5.sln  Project5.vcxproj  Project5.vcxproj.filters  Project6-Omega.docx  Project6.sln  Project6.vcxproj  Project6.vcxproj.filters  README.md
.github/workflows/: WindowsBuild.yml
CS230 Project3/: CMakeLists.txt  Project3-Transformations.docx  Project3.vcxproj.filters
CS230 Project3/Data/: Monkey.txt  MonkeyLivesText.txt  PlanetBounce.txt
CS230 Project3/Source/: Animation.c  CheatSystem.c  DemoScene.c  Entity.h  Level1Scene.c  Level2Scene.c  Matrix2D.c  Matrix2D.h  PlatformSystem.c  SceneSystem.c  Sprite.c  Sprite.h  Stream.h  Transform.c
CS230 Project3/Tests/: AnimationTests.cpp  EntityTests.cpp  Matrix2DTests.cpp  SpriteTests.cpp  TransformTests.cpp  Vector2DTests.cpp
CS230 Project3/Tests/TestData/: SpriteRead_data.txt  TransformRead_data.txt
Data/: Arena.txt  Asteroid.txt  AsteroidsHighScore.txt  AsteroidsScore.txt  AsteroidsWave.txt  Bullet.txt  Mesh16x8.txt  MeshArena.txt  MeshAsteroid.txt  MeshBullet.txt  MeshSpaceship.txt  Monkey.txt  MonkeyLivesText.txt  OmegaHighScore.txt  OmegaScore.txt  OmegaWave.txt  PlanetBounce.txt  PlanetJump.txt  Spaceship.txt  SpaceshipHoming.txt  SpaceshipOmega.txt  SpriteSourceArenaBackground.txt  SpriteSourceFontSheet.txt
Scripts/: CopyFiles.bat  CopyTestFiles.bat
Source/: Animation.c  Animation.h  AsteroidsScene.c  AsteroidsScene.h  Behavior.c  Behavior.h  BehaviorAsteroid.c  BehaviorAsteroid.h  BehaviorBullet.c  BehaviorBullet.h  BehaviorHudText.c  BehaviorHudText.h  BehaviorSpaceship.c  BehaviorSpaceship.h  CheatSystem.c  CheatSystem.h  Collider.c  Collider.h  ColliderCircle.c  ColliderCircle.h  ColliderLine.c  ColliderLine.h  Engine.c  Entity.c  Entity.h  EntityContainer.c  EntityContainer.h  EntityFactory.c  EntityFactory.h  Level1Scene.c  Level2Scene.c  Main.c  Matrix2D.c  Mesh.c  Mesh.h  MeshLibrary.c  MeshLibrary.h  OmegaScene.c  OmegaScene.h  Physics.c  (+21 more)
Tests/: PhysicsTests.cpp  RandomTests.cpp  TransformTests.cpp  Vector2DTests.cpp
Tests/TestData/: TransformRead_data.txt
